--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         var adobeDCView = new AdobeDC.View({clientId: "e084c0213b66464495a3440da65e8e1c", divId: "adobe-dc-view"});
         adobeDCView.previewFile(
        {
-          content:   {location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
+          content:   {location: {url: "test.pdf"}},
           metaData: {fileName: "Bodea Brochure.pdf"}
        });
     });
