added index page

--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
-<!--Get the samples from https://www.adobe.com/go/pdfembedapi_samples-->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
- <title>Adobe Document Services PDF Embed API Sample</title>
- <meta charset="utf-8"/>
- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
- <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-<body style="margin: 0px">
- <div id="adobe-dc-view"></div>
- <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
- <script type="text/javascript">
-    document.addEventListener("adobe_dc_view_sdk.ready", function()
-    {
-        var adobeDCView = new AdobeDC.View({clientId: "e084c0213b66464495a3440da65e8e1c", divId: "adobe-dc-view"});
-        adobeDCView.previewFile(
-       {
-          content:   {location: {url: "test.pdf"}},
-          metaData: {fileName: "Bodea Brochure.pdf"}
-       });
-    });
- </script>
+<body>
+  <button><a href="/testet/2019.html"></a></button>
 </body>
 </html>
