--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
   <title>Document</title>
 </head>
 <body>
-  <button><a href="/testet/2010/2010.html">TESTI 2010</a></button>
-  <button><a href="/testet/2011/2011.html">TESTI 2011</a></button>
-  <button><a href="/testet/2013/2013.html">TESTI 2013</a></button>
-  <button><a href="/testet/2014/2014.html">TESTI 2014</a></button>
-  <button><a href="/testet/2015/2015.html">TESTI 2015</a></button>
-  <button><a href="/testet/2016/2016.html">TESTI 2016</a></button>
-  <button><a href="/testet/2017/2017.html">TESTI 2017</a></button>
-  <button><a href="/testet/2018/2018.html">TESTI 2018</a></button>
-  <button><a href="/testet/2019/2019.html">TESTI 2019</a></button>
+  <nav>
+    <h1><a href="index.html"></a>Testet E Semimaturës</h1>
+    <h3>Punoi: <em><a href="https://www.linkedin.com/in/ubejd-haziri-2a9755213/" target="_blank">Ubejd Haziri</a></em></h3>
+  </nav>
+  <main>
+    <button><a href="/testet/2010/2010.html">TESTI 2010</a></button>
+    <button><a href="/testet/2011/2011.html">TESTI 2011</a></button>
+    <button><a href="/testet/2013/2013.html">TESTI 2013</a></button>
+    <button><a href="/testet/2014/2014.html">TESTI 2014</a></button>
+    <button><a href="/testet/2015/2015.html">TESTI 2015</a></button>
+    <button><a href="/testet/2016/2016.html">TESTI 2016</a></button>
+    <button><a href="/testet/2017/2017.html">TESTI 2017</a></button>
+    <button><a href="/testet/2018/2018.html">TESTI 2018</a></button>
+    <button><a href="/testet/2019/2019.html">TESTI 2019</a></button>
+  </main>
 </body>
 </html>
