--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav>
-    <h1><a href="index.html"></a>Testet E Semimaturës</h1>
+    <h1><a href="index.html">Testet E Semimaturës</a></h1>
     <h3>Punoi: <em><a href="https://www.linkedin.com/in/ubejd-haziri-2a9755213/" target="_blank">Ubejd Haziri</a></em></h3>
   </nav>
   <main>
