--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Testet E Arritshmërisë</title>
+  <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
   <nav>
-    <h1><a href="index.html">Testet E Semimaturës</a></h1>
+    <h1><a href="index.html">Testet E Arritshmërisë</a></h1>
     <h3>Punoi: <em><a href="https://www.linkedin.com/in/ubejd-haziri-2a9755213/" target="_blank">Ubejd Haziri</a></em></h3>
   </nav>
   <main>
